[gd_scene load_steps=22 format=3 uid="uid://co6v1q5ws04xl"]

[ext_resource type="Script" path="res://scripts/ot_1_geyser.gd" id="1_swq1s"]
[ext_resource type="Texture2D" uid="uid://0cuicw480c4g" path="res://assets/art/obstacles/OT2 Geyser-Sheet.png" id="2_tmrbe"]
[ext_resource type="AudioStream" uid="uid://igst77uyspc4" path="res://audios/geyser sound.mp3" id="3_hy8ki"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g7iro"]
atlas = ExtResource("2_tmrbe")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lisd"]
atlas = ExtResource("2_tmrbe")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25eun"]
atlas = ExtResource("2_tmrbe")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6pb1"]
atlas = ExtResource("2_tmrbe")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk87w"]
atlas = ExtResource("2_tmrbe")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vfgn"]
atlas = ExtResource("2_tmrbe")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4g1c"]
atlas = ExtResource("2_tmrbe")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eg16"]
atlas = ExtResource("2_tmrbe")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3by8"]
atlas = ExtResource("2_tmrbe")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lblyt"]
atlas = ExtResource("2_tmrbe")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdqsv"]
atlas = ExtResource("2_tmrbe")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfn0w"]
atlas = ExtResource("2_tmrbe")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1elt"]
atlas = ExtResource("2_tmrbe")
region = Rect2(960, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkhsr"]
atlas = ExtResource("2_tmrbe")
region = Rect2(1040, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gla5x"]
atlas = ExtResource("2_tmrbe")
region = Rect2(1120, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1xo3"]
atlas = ExtResource("2_tmrbe")
region = Rect2(1200, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ie23j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7iro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lisd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25eun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6pb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk87w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vfgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4g1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eg16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3by8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lblyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdqsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfn0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1elt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkhsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gla5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1xo3")
}],
"loop": false,
"name": &"eject",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0ai1"]
size = Vector2(124.531, 127.129)

[node name="OT1 Geyser" type="Node2D" groups=["Ground"]]
script = ExtResource("1_swq1s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_ie23j")
animation = &"eject"
autoplay = "eject"

[node name="EjectArea" type="Area2D" parent="."]
position = Vector2(1, 175)
collision_layer = 16
collision_mask = 6

[node name="EjectBox" type="CollisionShape2D" parent="EjectArea"]
position = Vector2(-10, -196)
shape = SubResource("RectangleShape2D_d0ai1")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hy8ki")
max_distance = 700.0

[connection signal="body_entered" from="EjectArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="EjectArea" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
